# backend-supletivo

./: .env.ci  .env.example  .gitignore  ANALYSIS-want_sanitize.md  ONBOARDING.md  README.md  devagent_smoke.py  pyproject.toml  pytest.ini
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
api/: __init__.py  auth.py  base.py  clients.py  collaborators.py  health.py  leadership.py  schemas.py  staff.py  staff_notify.py  tools.py  triage.py
bot/: actor.py  apps.py  checks.py  context.py  crew_call.py  crew_flow.py  crew_tools.py  engine.py  extract.py  faq.py  guardrail.py  models.py  ratelimit.py  reads.py  router.py  security.py  urls.py  views.py  worker.py
core/: environment.py  fallback.py  hooks.py  logging_middleware.py  media.py  media_views.py  models.py  net.py  pdf.py  prod_settings.py  settings.py  test_adapters.py  urls.py  validation.py  webhook_auth.py
deploy/: CLAUDE.lxc-backend.md
finance/: apps.py  checks.py  config.py  models.py  tasks.py
hub/: apps.py  checks.py  config.py  models.py
integrations/: status.py
notify/: apps.py  checks.py  dispatch.py  identity.py  models.py  remote.py  sanitize.py  self_check.py
scripts/: rotate_evolution_secret.sh
tests/: conftest.py  test_address_proof.py  test_address_service.py  test_aicall_link.py  test_api_auth.py  test_api_clients.py  test_api_collaborators.py  test_api_e2e.py  test_api_health.py  test_api_schemas.py  test_api_staff.py  test_auth.py  test_candidate_async_completion.py  test_candidate_doc_race.py  test_candidate_education.py  test_collaborator_join.py  test_consent.py  (+51 more)
(+350 files in other folders)
